driver/tests/snap/type_error/pi_lambda_in_object/0_input.splic
// ERROR: lambda in object-level function body (meta-level only)
code fn test(x: u64) -> u64 {
    lam(y: u64) = y
}
